# ijepa

./: .envrc  .gitignore  pyproject.toml
configs/: test_small.yaml
src/: helper.py  train.py
src/datasets/: imagenet1k_hf.py
src/models/: vision_transformer.py
